2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/Job_Reference__c.object-meta.xml
<CustomObject>
    <description>Stores the Job reference no</description>
    <label>Job Reference</label>
    <nameField>
        <label>Job Ref No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>