2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job References (Account Name)</relationshipLabel>
    <relationshipName>Job_References1</relationshipName>
    <type>Lookup</type>
</CustomField>