2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Account_Name2__c.field-meta.xml
<CustomField>
    <fullName>Account_Name2__c</fullName>
    <inlineHelpText>Leave this field blank. It will auto populate the Account Name from the related Opportunity.</inlineHelpText>
    <label>Account Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>