2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Act_FCL_Freight__c.field-meta.xml
<CustomField>
    <fullName>Act_FCL_Freight__c</fullName>
    <label>Act. FCL Freight (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>