2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Act_Vendor_Invoice_Air__c.field-meta.xml
<CustomField>
    <fullName>Act_Vendor_Invoice_Air__c</fullName>
    <formula>Act_Freight_Air__c  +  Act_Transport_Air__c  +  Act_Other_Charges_Air__c +  Act_ISS_FSC_Air__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. Vendor Invoice-Air (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>