2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Act_Vendor_Invoice_LCL__c.field-meta.xml
<CustomField>
    <fullName>Act_Vendor_Invoice_LCL__c</fullName>
    <formula>Act_Freight_LCL__c  +  Act_Other_Charges_LCL__c  +  Act_Transport_LCL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. Vendor Invoice-LCL (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>