2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Act_Vendor_s_Invoice_FCL__c.field-meta.xml
<CustomField>
    <fullName>Act_Vendor_s_Invoice_FCL__c</fullName>
    <formula>Act_FCL_Freight__c + Act_Other_Charges_FCL__c + Act_Transport_FCL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. Vendor&apos;s Invoice-FCL (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>