2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job from which Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job References</relationshipLabel>
    <relationshipName>Job_References</relationshipName>
    <type>Lookup</type>
</CustomField>