2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Air_Freight__c.field-meta.xml
<CustomField>
    <fullName>Air_Freight__c</fullName>
    <formula>Chargeable_Weight_kg__c  *   Air_Freight_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Air Freight (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>