2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Airport_Supervision__c.field-meta.xml
<CustomField>
    <fullName>Airport_Supervision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Airport Supervision</label>
    <type>Checkbox</type>
</CustomField>