2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Billing_Address__c</fullName>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>