2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Consignees_Details__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Consignees_Details__c</fullName>
    <label>Consignee Name &amp; Address</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>