2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Delivery_Details__c</fullName>
    <label>Deliver To &amp; Address</label>
    <type>TextArea</type>
</CustomField>