2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Email__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>