2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Fax__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Fax__c</fullName>
    <label>Fax</label>
    <length>25</length>
    <type>Text</type>
</CustomField>