2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Mobile__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Mobile__c</fullName>
    <label>Mobile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>