2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Notifying_Party__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Notifying_Party__c</fullName>
    <label>Notifying Party &amp; Address</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>