2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Phone__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Phone__c</fullName>
    <label>Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>