2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AMJR_Shippers_Details__c.field-meta.xml
<CustomField>
    <fullName>AMJR_Shippers_Details__c</fullName>
    <label>Shipper Name &amp; Address</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>