2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Amount_Quoted3__c.field-meta.xml
<CustomField>
    <fullName>Amount_Quoted3__c</fullName>
    <description>For insurance with/without hoisting</description>
    <label>Amount Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>