2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Amount_Quoted_2__c.field-meta.xml
<CustomField>
    <fullName>Amount_Quoted_2__c</fullName>
    <label>Amount Quoted (NF)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>