2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Annex_A_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Annex_A_Submitted_Date__c</fullName>
    <label>Annex A Submitted Date</label>
    <type>Date</type>
</CustomField>