2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Annex_B_Appointed_Date__c.field-meta.xml
<CustomField>
    <fullName>Annex_B_Appointed_Date__c</fullName>
    <label>Annex B Approved Date</label>
    <type>Date</type>
</CustomField>