2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/API_Error__c.field-meta.xml
<CustomField>
    <fullName>API_Error__c</fullName>
    <label>API Error</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>