2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/AS13_Remarks__c.field-meta.xml
<CustomField>
    <fullName>AS13_Remarks__c</fullName>
    <label>Art Basel Remarks</label>
    <type>TextArea</type>
</CustomField>