2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ATA_Date_2L__c.field-meta.xml
<CustomField>
    <fullName>ATA_Date_2L__c</fullName>
    <label>ATA Date (2L)</label>
    <type>Date</type>
</CustomField>