2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ATA_Date__c.field-meta.xml
<CustomField>
    <fullName>ATA_Date__c</fullName>
    <label>ATA Date</label>
    <type>Date</type>
</CustomField>