2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ATA_Time__c.field-meta.xml
<CustomField>
    <fullName>ATA_Time__c</fullName>
    <defaultValue>&quot;hrs&quot;</defaultValue>
    <label>ATA Time (24hrs)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>