2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ATD_Date_2L__c.field-meta.xml
<CustomField>
    <fullName>ATD_Date_2L__c</fullName>
    <label>ATD Date (2L)</label>
    <type>Date</type>
</CustomField>