2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ATD_Date__c.field-meta.xml
<CustomField>
    <fullName>ATD_Date__c</fullName>
    <label>ATD Date</label>
    <type>Date</type>
</CustomField>