2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ATD_Time_2L__c.field-meta.xml
<CustomField>
    <fullName>ATD_Time_2L__c</fullName>
    <label>ATD Time (2L)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>