2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment(s)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>