2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/BL_AWB__c.field-meta.xml
<CustomField>
    <fullName>BL_AWB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BL/AWB</label>
    <type>Checkbox</type>
</CustomField>