2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Booking_Done__c.field-meta.xml
<CustomField>
    <fullName>Booking_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Done</label>
    <type>Checkbox</type>
</CustomField>