2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Booth_No__c.field-meta.xml
<CustomField>
    <fullName>Booth_No__c</fullName>
    <label>Booth No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>