2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Certification_No__c.field-meta.xml
<CustomField>
    <fullName>Certification_No__c</fullName>
    <description>Policy Issuance Date for Installation+Hoisting Job</description>
    <label>Certification No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>