2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Certification_No_F__c.field-meta.xml
<CustomField>
    <fullName>Certification_No_F__c</fullName>
    <label>Certification No. (F)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>