2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Chargeable_Volume_cbm__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Volume_cbm__c</fullName>
    <label>Chargeable Volume (cbm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>