2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Chargeable_Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight_kg__c</fullName>
    <label>Chargeable Weight (kg)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>