2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Ultimate owner of the items.</inlineHelpText>
    <label>Collector</label>
    <referenceTo>artApp__Collector__c</referenceTo>
    <relationshipLabel>Job References</relationshipLabel>
    <relationshipName>Job_References</relationshipName>
    <type>Lookup</type>
</CustomField>