2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Client_s__c.field-meta.xml
<CustomField>
    <fullName>Client_s__c</fullName>
    <inlineHelpText>For ABHK only, CS to key in all gallery names if &gt;1</inlineHelpText>
    <label>Client(s)</label>
    <type>TextArea</type>
</CustomField>