2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Cond_Check__c.field-meta.xml
<CustomField>
    <fullName>Cond_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cond. Check</label>
    <type>Checkbox</type>
</CustomField>