2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCL-20’</fullName>
            </value>
            <value>
                <fullName>FCL-40’</fullName>
            </value>
            <value>
                <fullName>FCL-40’ HC</fullName>
            </value>
            <value>
                <fullName>FCL 20’ RF</fullName>
            </value>
            <value>
                <fullName>FCL 40’ RF GP</fullName>
            </value>
            <value>
                <fullName>FCL 40’ RF HC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>