2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/CsinchargeOpp__c.field-meta.xml
<CustomField>
    <fullName>CsinchargeOpp__c</fullName>
    <formula>TEXT(Opportunity__r.Person_In_Charge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CsinchargeOpp</label>
    <type>Text</type>
</CustomField>