2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Custom_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Custom_Clearance__c</fullName>
    <label>Custom Clearance</label>
    <type>Date</type>
</CustomField>