2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Days_in_Transit__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Transit__c</fullName>
    <formula>Delivery_Date__c - Custom_Clearance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Transit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>