2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Days_in_Transit_Storage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Transit_Storage__c</fullName>
    <label>Days in Transit Storage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>