2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Declaration_needed_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Declaration_needed_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration needed? (Y/N)</label>
    <type>Checkbox</type>
</CustomField>