2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Declaration_Value__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Value__c</fullName>
    <inlineHelpText>Please indicate the currency (eg USD/HKD) and the amount clearly.</inlineHelpText>
    <label>Declaration Value</label>
    <length>66</length>
    <type>Text</type>
</CustomField>