2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/DTD_DTP__c.field-meta.xml
<CustomField>
    <fullName>DTD_DTP__c</fullName>
    <label>DTD/DTP/PTD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DTD</fullName>
            </value>
            <value>
                <fullName>DTP</fullName>
            </value>
            <value>
                <fullName>PTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>