2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ETA_2L__c.field-meta.xml
<CustomField>
    <fullName>ETA_2L__c</fullName>
    <label>ETA (2L)</label>
    <type>Date</type>
</CustomField>