2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ETA_Time_24hrs__c.field-meta.xml
<CustomField>
    <fullName>ETA_Time_24hrs__c</fullName>
    <defaultValue>&quot;hrs&quot;</defaultValue>
    <label>ETA Time (24hrs)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>