2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ExhibitionN__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionN__c</fullName>
    <formula>Opportunity__r.Exhibition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition</label>
    <type>Text</type>
</CustomField>