2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Export_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Export_Request_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export Request Form</label>
    <type>Checkbox</type>
</CustomField>