2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Flight_No_2L__c.field-meta.xml
<CustomField>
    <fullName>Flight_No_2L__c</fullName>
    <label>Flight No. (2L)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>