2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight No.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>