2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Freight_Unit_Cost_LCL__c.field-meta.xml
<CustomField>
    <fullName>Freight_Unit_Cost_LCL__c</fullName>
    <label>LCL Freight Unit Cost (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>