2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Gross_Wt_kg__c.field-meta.xml
<CustomField>
    <fullName>Gross_Wt_kg__c</fullName>
    <label>Gross Wt (kg)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>