2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/HBL__c.field-meta.xml
<CustomField>
    <fullName>HBL__c</fullName>
    <label>HBL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>