2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Insurance_Value2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Value2__c</fullName>
    <description>Currency</description>
    <label>Insured Value (NF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>