2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Value__c</fullName>
    <inlineHelpText>Currency</inlineHelpText>
    <label>Insured Value (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>