2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Insured_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Insured_Cost1__c</fullName>
    <formula>Insurance_Value__c   *  Insured_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Cost (F)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>