2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Insured_Cost3__c.field-meta.xml
<CustomField>
    <fullName>Insured_Cost3__c</fullName>
    <formula>Insurance_Value2__c   *  Insured_Cost2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Cost (NF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>